# backtest_and_deploy

./: .gitignore  LICENSE  README.md  get_data.py  import_data.py  import_klines.py  todo.txt  update_db.py
cpp/: CMakeLists.txt  Makefile  bindings.cpp  build  compile_commands.json  example.py  main.cpp  price
cpp/.cache/clangd/index/: backtest.cpp.15A62FECBC761BF5.idx  backtest.hpp.1F036036100AABF1.idx  backtest_result.hpp.D2B2D2AE6EA532D2.idx  bindings.cpp.9DB1476DF889B53D.idx  bindings.cpp.DB168FAC9180D92B.idx  config.hpp.689F95883675E125.idx  ctrade.cpp.A08A09CE02732861.idx  ctrade.cpp.AF100697187A1F1A.idx  execution_context.cpp.E9DE46711D17FEC6.idx  execution_context.hpp.F2B36789F7113365.idx  execution_engine.cpp.DCD1F7DC17D05752.idx  execution_engine.hpp.C18988E92465E590.idx  fill.hpp.F8804F4BCDDF5F5D.idx  main.cpp.0A721CA4702776AD.idx  market_data.cpp.287730C9D0AEDA5E.idx  market_data.hpp.6AC7BFCD28ED30BD.idx  market_state.hpp.280EACF36F9B7E06.idx  order.hpp.C4910A6400F53952.idx  portfolio.cpp.70CB7462286DDEE2.idx  portfolio.hpp.4BB20C21DBB0A4AA.idx  strategy.hpp.D27BF23F8D6F5DFC.idx
cpp/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
cpp/bindings/: bindings.cpp
cpp/ctrade/: __init__.py
cpp/include/ctrade/: backtest.hpp  backtest_result.hpp  config.hpp  execution_context.hpp  execution_engine.hpp  fill.hpp  market_data.hpp  market_state.hpp  order.hpp  portfolio.hpp  strategy.hpp
cpp/old/: CMakeLists.txt
cpp/src/: backtest.cpp  ctrade.cpp  execution_context.cpp  execution_engine.cpp  market_data.cpp  portfolio.cpp  postgres_market_data.cpp
cpp/test/cpp/: CMakeLists.txt  test_execution.cpp  test_market_data.cpp  test_portfolio.cpp
cpp/test/python/: conftest.py  test_smoke.py
data/: BTCUSDT-1m-2017-08-17.csv  BTCUSDT-1m-2017-08-18.csv  BTCUSDT-1m-2017-08-19.csv  BTCUSDT-1m-2017-08-20.csv  BTCUSDT-1m-2017-08-21.csv  BTCUSDT-1m-2017-08-22.csv  BTCUSDT-1m-2017-08-23.csv  BTCUSDT-1m-2017-08-24.csv  BTCUSDT-1m-2017-08-25.csv  BTCUSDT-1m-2017-08-26.csv  BTCUSDT-1m-2017-08-27.csv  BTCUSDT-1m-2017-08-28.csv  BTCUSDT-1m-2017-08-29.csv  BTCUSDT-1m-2017-08-30.csv  BTCUSDT-1m-2017-08-31.csv  BTCUSDT-1m-2017-09-01.csv  BTCUSDT-1m-2017-09-02.csv  BTCUSDT-1m-2017-09-03.csv  BTCUSDT-1m-2017-09-04.csv  BTCUSDT-1m-2017-09-05.csv  BTCUSDT-1m-2017-09-06.csv  BTCUSDT-1m-2017-09-07.csv  BTCUSDT-1m-2017-09-08.csv  BTCUSDT-1m-2017-09-09.csv  BTCUSDT-1m-2017-09-10.csv  BTCUSDT-1m-2017-09-11.csv  BTCUSDT-1m-2017-09-12.csv  BTCUSDT-1m-2017-09-13.csv  BTCUSDT-1m-2017-09-14.csv  BTCUSDT-1m-2017-09-15.csv  BTCUSDT-1m-2017-09-16.csv  BTCUSDT-1m-2017-09-17.csv  BTCUSDT-1m-2017-09-18.csv  BTCUSDT-1m-2017-09-19.csv  BTCUSDT-1m-2017-09-20.csv  BTCUSDT-1m-2017-09-21.csv  BTCUSDT-1m-2017-09-22.csv  BTCUSDT-1m-2017-09-23.csv  BTCUSDT-1m-2017-09-24.csv  BTCUSDT-1m-2017-09-25.csv  (+923 more)
